--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "testServer": "node ./server/server.js"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
